# numsim

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
.github/: pull_request_template.md
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  numsim  parameters.txt
src/computation/: computation.cpp  computation.h  computationParallel.cpp  computationParallel.h
src/discretization/: centralDifferences.h  discretization.h  donorCell.cpp  donorCell.h  staggeredGrid.cpp  staggeredGrid.h
src/output_writer/: output_writer_paraview.cpp  output_writer_paraview_parallel.cpp  write_paraview_output.cpp
src/partitioning/: partitioning.cpp  partitioning.h
src/pressure_solver/: gaussSeidel.cpp  gaussSeidel.h  pressureSolver.cpp  pressureSolver.h  pressureSolverParallel.cpp  pressureSolverParallel.h  sor.cpp  sor.h  sorParallel.cpp  sorParallel.h
src/settings/: settings.cpp  settings.h
src/storage/: array2d.cpp  array2d.h  centralDifferences.cpp  centralDifferences.h  discretization.cpp  discretization.h  donorCell.cpp  donorCell.h  fieldVariable.cpp  fieldVariable.h  staggeredGrid.cpp  staggeredGrid.h
testing/: CMakeLists.txt  test_discretization.cpp  test_settings.cpp  test_storage.cpp
